--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
   <body class="bg-gray-100 text-slate-800">
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+ <script type="module" src="/index.tsx"></script>
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
